@@ -18,7 +18,7 @@ TODO:
  * The repository can be a local path, and the project can be managed with an
    SCM, preferably with Mercurial.
 
- * Check FileNameTemplate class documentation.
+ * Check FilenameTemplate class documentation.
 
  * Update the exceptions. Check if a proper exception is raised instead of
    raising ValueErrors all the time.
